# introduction_to_rust

./: README.md
actix-web-blog/src/: error.rs  main.rs  repository.rs
actix-web-hello/src/: main.rs
axum-web-blog/: Cargo.toml
axum-web-blog/entity/: Cargo.toml
axum-web-blog/entity/src/: lib.rs  post.rs
axum-web-blog/migration/: Cargo.toml
axum-web-blog/migration/src/: lib.rs  m20230209_111150_create_posts.rs
axum-web-blog/src/: main.rs  repository.rs
first-project/src/: main.rs
guessing_game/src/: main.rs
lambda-s3event/: Cargo.toml
lambda-s3event/src/: main.rs
mandelbrot/: Cargo.toml  LICENSE_MIT
mandelbrot/src/: lib.rs  logic.rs
mandelbrot/www/: index.js  package-lock.json
playground/src/: main.rs
pyo3-example/: fib.py
pyo3-example/src/: lib.rs
rpn/: Cargo.toml  README.md
rpn/src/: main.rs
second-project/src/: main.rs
start/src/: main  main.rs  module_hello.rs
third-project/: Makefile.toml
third-project/src/: main.rs
todo/: Cargo.toml  Makefile  README.md
todo/migrations/: 20230128072445_init.sql
todo/src/: handlers.rs  main.rs  repositories.rs
todo/todo-api/: Cargo.toml  Makefile  README.md
todo/todo-api/migrations/: 20230129121137_label.sql
todo/todo-api/src/: handlers.rs  main.rs  repositories.rs
todo/todo-api/src/handlers/: label.rs  todo.rs
todo/todo-api/src/repositories/: label.rs  todo.rs
todo/todo-front/: .tool-versions
yew-blog/: Cargo.toml
yew-blog/src/: main.rs
