[package]
name = "axum-web-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv="0.15.0"
entity = { path = "./entity" }

[dependencies.sea-orm]
version = "^0.11"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false